# Implicit-Im2col-for-Backpropagation

./: README.md
GPU-experiments/: CMakeLists.txt  GPUImplicit.cu  README.md
GPU-experiments/include/: ampere_sgemm.h  common.h  config.h  device_memory.h  helper.h
GPU-experiments/src/: ampere_sgemm.cu  cudnn.cu  helper.cpp  nopreprocess.cu  preprocess.cu
GPU-experiments/test_model/: Compare.py  merge.py  test.sh  test_model.py
GPU-experiments/test_model/config/: Sparsity_densenet121.cfg  Sparsity_resnet50.cfg  Sparsity_squeezenet1_1.cfg  Sparsity_vgg13.cfg  Sparsity_vgg16.cfg  Sparsity_vgg19.cfg
GPU-experiments/test_model/log_test/: alexnet_batch=16.txt  alexnet_batch=2.txt  alexnet_batch=4.txt  alexnet_batch=6.txt  alexnet_batch=8.txt  densenet121_batch=16.txt  densenet201_batch=1.txt  densenet201_batch=16.txt  densenet201_batch=2.txt  densenet201_batch=4.txt  densenet201_batch=6.txt  densenet201_batch=8.txt  mobilenet_v3_large_batch=1.txt  mobilenet_v3_large_batch=16.txt  mobilenet_v3_large_batch=2.txt  mobilenet_v3_large_batch=4.txt  mobilenet_v3_large_batch=6.txt  mobilenet_v3_large_batch=8.txt  resnet152_batch=1.txt  resnet152_batch=16.txt  resnet152_batch=2.txt  resnet152_batch=4.txt  resnet152_batch=6.txt  resnet152_batch=8.txt  resnet18_batch=1.txt  resnet18_batch=2.txt  shufflenet_v2_x2_0_batch=1.txt  shufflenet_v2_x2_0_batch=16.txt  shufflenet_v2_x2_0_batch=2.txt  shufflenet_v2_x2_0_batch=4.txt  shufflenet_v2_x2_0_batch=6.txt  shufflenet_v2_x2_0_batch=8.txt  squeezenet1_1_batch=1.txt  squeezenet1_1_batch=16.txt  squeezenet1_1_batch=2.txt  (+3 more)
(+64 files in other folders)
